add another site

--- a/test/style.css
+++ b/test/style.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   color: #ffffff;
   /* background: linear-gradient(180deg, #3a5379 0%, #0e0e0e 100%); */
-  background: linear-gradient(180deg, #38419e 0%, #04050c 100%);
+  background: linear-gradient(180deg, #170909 0%, #812f1a 100%);
   /* background: #1c283a; */
   margin-right: 9em;
   padding: 1em;
